--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,121 @@
     <title>Project 13</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>Test 13</h1>
-    <h2>Test 2</h2>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="./assets/Logo.png" alt="">
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <li>Home</li>
+                        <li>Services</li>
+                        <li>Pricing</li>
+                        <li>Testimonials</li>
+                        <li>Blog</li>
+                        <button>Free Trial</button>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <div class="container">
+            <div class="hero-container">
+                <div class="hero-left">
+                    <h1>Codext one of <br> the best system <br> in SASS</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta blanditiis harum sed debitis vel
+                        enim. Sapiente animi omnis autem eveniet pariatur doloribus eum, nesciunt reiciendis expedita
+                        quos et numquam nisi!</p>
+                </div>
+                <div class="hero-right">
+                    <img src="./assets/hero.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <section id="sass-section">
+        <div class="container">
+            <div class="sass-container">
+                <div class="sass-left">
+                    <img src="./assets/Saas illustration-01.svg" alt="">
+                </div>
+                <div class="sass-right">
+                    <h1>It's helpful for operating system</h1>
+                    <div class="sass-details">
+                        <div class="title">
+                            <span class="circle circle-orange"></span>
+                            <h2> Ultra fast & Secure</h2>
+
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem hic voluptatem reprehenderit
+                            accusantium est provident.</p>
+                        <div class="title">
+                            <span class="circle circle-green"></span>
+                            <h2>Allow customization</h2>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis aliquam tempora magni
+                            enim fuga. Quod.</p>
+                        <div class="title">
+                            <span class="circle circle-blue"></span>
+                            <h2>Smart Contract</h2>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis autem tempore optio
+                            laudantium error aliquid.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="feature">
+        <div class="container">
+            <h1>We Provide Best Feature <br> for Customer</h1>
+            <div class="feature-container">
+                <div class="item item-active">
+                    <div class="item-image item-web">
+                        <img src="./assets/web-developing.svg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>Clean Code</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, ipsa.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image item-data">
+                        <img src="./assets/data-analytics.svg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>Data Analytics</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, ipsa.</p>
+                    </div>
+                </div>
+                <div class="item item">
+                    <div class="item-image item-secured">
+                        <img src="./assets/secured-profile.svg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>Fully Secured</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, ipsa.</p>
+                    </div>
+                </div>
+                <div class="item item">
+                    <div class="item-image item-support">
+                        <img src="./assets/support.svg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>24/7 Support</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, ipsa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
