made navbar responsive

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
                 </div>
                 <div class="nav-links">
                     <ul>
+                     <div class="links">
                         <li>Home</li>
                         <li>Services</li>
                         <li>Pricing</li>
                         <li>Testimonials</li>
                         <li>Blog</li>
+                     </div>
                         <button>Free Trial</button>
                     </ul>
                 </div>
